# llm_agent

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
config/: agent.yml
config/profiles/: default.yml  git_analysis.yml
docker/: README.md  image-test.sh  nuke-docker.sh  purge-models.sh  up.sh
docker/dev/: Dockerfile  dev-container.sh
docker/ollama/: down.sh  up.sh
infra/: README.md
infra/terragrunt/: root.hcl
infra/terragrunt/live/prod/alerts-sns/: terragrunt.hcl
infra/terragrunt/live/prod/bedrock-iam/: terragrunt.hcl
infra/terragrunt/live/prod/bedrock-inference-profiles/: terragrunt.hcl
infra/terragrunt/live/prod/budget/: terragrunt.hcl
infra/terragrunt/modules/alerts-sns/: main.tf  variables.tf
infra/terragrunt/modules/bedrock-iam/: main.tf  outputs.tf  variables.tf
infra/terragrunt/modules/bedrock-inference-profile/: main.tf  outputs.tf  variables.tf
infra/terragrunt/modules/bedrock-inference-profile-stack/: main.tf  outputs.tf  variables.tf
infra/terragrunt/modules/budget/: main.tf  outputs.tf  variables.tf
scripts/: README.md  cli-bootstrap.sh  e2e_smoke.sh  run_agent_ollama.sh  smoke_agent.sh  smoke_bedrock.sh  smoke_ollama.sh
src/agent/: README.md  __main__.py  backends.py  cli.py  config.py  main.py  observability.py  tools.py
src/agent/tools/: README.md  __init__.py  core.py  git.py  list_dir.py  read_file.py  registry.py
tests/: test_cli_templates.py  test_git_tool.py  test_smoke.py  test_tool_contracts.py
